src/client/components/Modal/SimpleModal.css
.simpleModal {
  position: fixed;
  top: 0;
  left: 0;
  width:100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.6);
  z-index: 100000;
}

.simpleModalMain {
  position: relative;
  overflow-y: auto;
  overflow-x: hidden;
  background: white;
  top: 50%;
  width: 80%;
  height: 80%;
  left: 50%;
  transform: translate(-50%,-50%);
  border-radius: 15px;
}

.display-block {
  display: block;
}

.display-none {
  display: none;
}

